--- a/config/database.yml
+++ b/config/database.yml
@@ -20,5 +20,5 @@ production:
   database: cosmos_production
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV.fetch("COSMOS_DB_USER") { 'XXXXXXXX' } %>
-  socket: /tmp/mysql.sock
+  socket: /var/lib/mysql/mysql.sock
 
