--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "4.3.0",
     "admin-lte": "^3.0.5",
     "bootstrap": "^4.5.2",
+    "izimodal": "^1.5.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   },
