画像タイプのLINEメッセージ受信機能

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+/uploads/*
 /public/packs
 /public/packs-test
 /public/uploads
