--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fullcalendar/core": "^5.4.0",
+    "@fullcalendar/daygrid": "^5.4.0",
+    "@fullcalendar/interaction": "^5.4.0",
+    "@fullcalendar/list": "^5.4.0",
+    "@fullcalendar/timegrid": "^5.4.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "admin-lte": "^3.0.5",
+    "admin-lte": "^3.1.0-rc",
     "bootstrap": "^4.5.2",
     "izimodal": "^1.5.1",
     "jquery": "^3.5.1",
