--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,10 @@ yarn-debug.log*
 !/vendor/.keep
 .DS_Store
 /config/credentials.yml.enc
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
